--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <style>
-      canvas {
-        border:1px solid #d3d3d3;
-        background-color: #f1f1f1;
-      }
-    </style>
-  </head>
+  <canvas id="myCanvas" width="200" height="100"></canvas>
   <body>
     
   </body>
